RESOLVED FIXED209620
Regression(r258949) Safari sometimes crashes when becoming the foreground application
https://bugs.webkit.org/show_bug.cgi?id=209620
Summary Regression(r258949) Safari sometimes crashes when becoming the foreground app...
Chris Dumez
Reported 2020-03-26 14:28:52 PDT
Regression(r258949) Safari sometimes crashes when becoming the foreground application: ASSERTION FAILED: m_ref WebKitBuild/Debug/usr/local/include/wtf/UniqueRef.h(64) : T *WTF::UniqueRef<WebKit::WebProcessCache>::operator->() [T = WebKit::WebProcessCache] 1 0x119a80dd9 WTFCrash 2 0x12035e12b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x121219afb WTF::UniqueRef<WebKit::WebProcessCache>::operator->() 4 0x12121b246 WebKit::WebProcessPool::setApplicationIsActive(bool) 5 0x1210b1cc5 invocation function for block in WebKit::WebProcessPool::registerNotificationObservers() 6 0x1164f0e2c -[__NSObserver _doit:] 7 0x118a3d5e5 __CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ 8 0x118a3d579 ___CFXRegistrationPost1_block_invoke 9 0x118a3d4ee _CFXRegistrationPost1 10 0x118a3d12b ___CFXNotificationPost_block_invoke 11 0x118a0d22a -[_CFXNotificationRegistrar find:object:observer:enumerator:] 12 0x118a0c741 _CFXNotificationPost 13 0x1164c4361 -[NSNotificationCenter postNotificationName:object:userInfo:] 14 0x116e723a5 -[NSApplication _handleActivatedEvent:] 15 0x116e3f6d2 -[NSApplication(NSEvent) sendEvent:] 16 0x10f16e580 -[BrowserApplication sendEvent:] 17 0x116ed4793 _NXFinishActivation 18 0x116ed386b -[NSWindow(NSEventRouting) _handleMouseDownEvent:isDelayedEvent:] 19 0x116e415e9 -[NSWindow(NSEventRouting) _reallySendEvent:isDelayedEvent:] 20 0x116e4099e -[NSWindow(NSEventRouting) sendEvent:] 21 0x10fd44a50 -[Window sendEvent:] 22 0x10f329f8d -[BrowserWindow sendEvent:] 23 0x116e3ed7c -[NSApplication(NSEvent) sendEvent:] 24 0x10f16e580 -[BrowserApplication sendEvent:] 25 0x116ca2b5e -[NSApplication run] 26 0x116c74c25 NSApplicationMain
Attachments
Patch (1.69 KB, patch)
2020-03-26 14:30 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-26 14:29:07 PDT
Chris Dumez
Comment 2 2020-03-26 14:30:51 PDT
Per Arne Vollan
Comment 3 2020-03-26 14:35:37 PDT
Comment on attachment 394657 [details] Patch Thanks for fixing this! R=me.
EWS
Comment 4 2020-03-26 15:02:03 PDT
Committed r259083: <https://trac.webkit.org/changeset/259083> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394657 [details].
Note You need to log in before you can comment on or make changes to this bug.