Regression(r258949) Safari sometimes crashes when becoming the foreground application https://bugs.webkit.org/show_bug.cgi?id=209620 <rdar://problem/60930466>

Reviewed by Per Arne Vollan.

Make sure m_activationObserver gets unregistered on all Cocoa platforms, not just on iOS.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::unregisterNotificationObservers):


Canonical link: https://commits.webkit.org/222556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259083 268f45cc-cd09-0410-ab3c-d52691b4dbfc